# nrf-bluetooth-rs

./: Cargo.toml  flake.nix  memory.x  run.sh
.cargo/: config.toml
src/: link_layer.rs  main.rs
src/link_layer/: channel.rs  device_address.rs  packet.rs
src/link_layer/packet/: pdu.rs
src/link_layer/packet/pdu/: advertising.rs
