[package]
authors = ["lunabirkeland"]
edition = "2018"
readme = "README.md"
name = "nrf-bluetooth"
version = "0.1.0"

[dependencies]
bobbin-bits = "0.1.1"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "defmt", "executor-thread", "integrated-timers"] }
embassy-nrf = { version = "0.2.0", features = ["defmt", "gpiote", "nrf52840", "time-driver-rtc1"] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = ["defmt"] }
heapless = { version = "0.8.0" }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "embedded-test"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
